drawinglayer/source/processor2d/vclhelperbufferdevice.hxx
@@ -99,7 +99,7 @@ class impBufferDevice
     tools::Rectangle maDestPixel;
 
 public:
-    impBufferDevice(OutputDevice& rOutDev, const basegfx::B2DRange& rRange);
+    impBufferDevice(OutputDevice& rOutDev, const tools::Rectangle& rDestPixel);
     ~impBufferDevice();
 
     void paint(double fTrans = 0.0);
